--- a/ClientApp/src/styles/button.scss
+++ b/ClientApp/src/styles/button.scss
@@ -1,26 +1,31 @@
-.button{
+.button {
     background-color: #835afd;
     border-radius: 8px;
     height: 50px;
     font-weight: 500;
     color: #FFF;
     padding: 0 32px;
-
     display: flex;
     justify-content: center;
     align-items: center;
 
-    >img{
+    > img {
         margin-right: 8px;
     }
-    
-    transition: filter 0.2s;
 
-    &:not(:disabled):hover{
-        filter:brightness(0.85)
+    &.outlined {
+        background: #FFF;
+        border: 1.5px solid;
+        color: #835afd;
     }
 
-    &:disabled{
+    transition: filter 0.2s;
+
+    &:not(:disabled):hover {
+        filter: brightness(0.85)
+    }
+
+    &:disabled {
         opacity: 0.6;
         cursor: not-allowed;
     }
